fix location of toast arrow, reduced li mobile header spacing on mobile

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -263,7 +263,7 @@ a.genre-badge > span.badge:hover {
   border-bottom: 10px solid black;
   position: absolute;
   top: -10px;
-  right: 36px;
+  right: 28px;
 }
 
 /* Convenience classes - colors copied from Bootstrap */
